fixed issue that would hide footer behind featured list

--- a/website/public/css/index.less
+++ b/website/public/css/index.less
@@ -90,7 +90,6 @@
 
   .featured-section-wrapper {
     padding: 0;
-    height: 100px;
     .title-bandeau {
       width: 100%;
       .title-text {
